--- a/portfolio.html
+++ b/portfolio.html
@@ -337,32 +337,27 @@
 								/>
 								<path
 									d="M555.12,156.35H580.9v49.47c-13.41,10.1-31.87,15.5-49.29,15.5-38.32,0-66.53-26.3-66.53-63s28.21-63.05,67.05-63.05c21.43,0,39.19,7.32,51,21.08L565.05,133c-8.88-9.4-19.16-13.75-31.52-13.75-23.69,0-39.89,15.84-39.89,39,0,22.81,16.2,39,39.54,39a44.79,44.79,0,0,0,21.94-5.22Z"
-                  fill="#fff"
+									fill="#fff"
 								/>
 								<path
 									d="M715.35,196.58v22.65H621V97.31h92.13V120H649v26.48h56.6v21.94H649v28.21Z"
-                  fill="#fff"
-
+									fill="#fff"
 								/>
 								<path
 									d="M863.56,97.31V219.23H840.4l-60.78-74v74H751.75V97.31h23.34l60.61,74v-74Z"
-                  fill="#fff"
-
+									fill="#fff"
 								/>
 								<path
 									d="M1018.22,97.31V219.23H995.06l-60.79-74v74H906.41V97.31h23.33l60.61,74v-74Z"
-                  fill="#fff"
-
+									fill="#fff"
 								/>
 								<path
 									d="M1155.46,196.58v22.65h-94.4V97.31h92.13V120H1089.1v26.48h56.61v21.94H1089.1v28.21Z"
-                  fill="#fff"
-
+									fill="#fff"
 								/>
 								<path
 									d="M1267.44,219.23,1238,176.9l-28.91,42.33h-32.39l45.1-62L1179,97.31h32l28,39.54,27.51-39.54h30.48l-42.49,58.87,45.45,63Z"
-                  fill="#fff"
-
+									fill="#fff"
 								/>
 								<path
 									d="M474.68,265.93v15.73h25v8.12h-25v19.79h-9.6V257.88h37.74v8.05Z"
@@ -419,7 +414,7 @@
 							</li>
 							<li><a href="contact.html">Contact Us</a></li>
 						</ul>
-								</div>
+					</div>
 					<div class="toggle"></div>
 				</div>
 			</header>
@@ -427,11 +422,53 @@
 				<video src="./wallpaper.mp4" muted loop autoplay playsinline></video>
 			</div>
 			<div class="overlay"></div>
-			<div class="about-text">
+			<div class="portfolio-text">
 				<h2>Portfolio</h2>
 				<p>
-					Finding potential projects...
+					We’re proud to support and invest in over 10+ companies in the crypto
+					industry, across every stage and sub-sector. Meet our portfolio below.
 				</p>
+				<div class="portfolio">
+					<a class="portfolio-item" href="https://bit.country/" target="
+					_blank">
+						<img src="./assets/BitCountry.JPG" alt="Bit country"/>
+						<p>Bit.Country</p><p>Continuum</p>
+					</a>
+					<a class="portfolio-item" href="https://bit.country/" target="
+					_blank">
+						<img src="./assets/BitCountry.JPG" alt="Bit country" />
+						<p>Bit.Country</p><p>Pioneer</p>
+				</a>
+					<a class="portfolio-item" href="https://acala.network" target="_blank">
+						<img src="./assets/Acala.PNG" alt="Acala" />
+						<p>Acala</p>
+					</a>
+					<a class="portfolio-item" href="https://moonbeam.network" target="_blank">
+						<img src="./assets/Moonbeam.PNG" alt="Moonbeam" />
+						<p>Moonbeam</p>
+					</a>
+					<a class="portfolio-item" href="https://picasso.composable.finance" target="_blank">
+						<img src="./assets/Picasso.PNG" alt="Picasso" />
+						<p>Picasso</p>
+					</a>
+					<a class="portfolio-item" href="https://centrifuge.io/altair" target="_blank">
+						<img src="./assets/Altair.JPG" alt="Altair" />
+						<p>Altair</p>
+					</a>
+					<a class="portfolio-item" href="https://genshiro.equilibrium.io" target="_blank">
+						<img src="./assets/Genshiro.PNG" alt="Genshiro" />
+						<p>Genshiro</p>
+					</a>
+					<a class="portfolio-item" href="https://kintsugi.interlay.io" target="_blank">
+						<img src="./assets/Kintsugi.PNG" alt="Kintsugi" />
+						<p>Kintsugi</p>
+					</a>
+					<a class="portfolio-item" href="https://manta.network" target="_blank">
+						<img src="./assets/MantaNetwork.JPG" alt="MantaNetwork" />
+						<p>Manta Network</p>
+					</a>
+				</div>
+	
 			</div>
 			<ul class="social">
 				<li>&copy; 2021 Gennex Foundation All rights reserved</li>
@@ -450,7 +487,7 @@
 				</li>
 				<li><a href="contact.html">Contact Us</a></li>
 			</ul>
-</div>
+		</div>
 		<script>
 			const menuToggle = document.querySelector('.toggle');
 			const showcase = document.querySelector('.showcase');
